--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@einlogic/mcp-fabric-api",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "MCP server for Microsoft Fabric REST APIs — enables data engineers and data analysts to use AI assistants beyond Copilot to build and manage Fabric components",
   "type": "module",
   "main": "build/index.js",
@@ -21,6 +21,7 @@
     "@azure/identity": "^4.13.0",
     "@modelcontextprotocol/sdk": "^1.26.0",
     "express": "^4.21.0",
+    "tedious": "^19.2.1",
     "zod": "^3.24.0"
   },
   "devDependencies": {
